[gd_scene load_steps=2 format=3 uid="uid://cy3lpn4w6872q"]

[ext_resource type="Script" uid="uid://burmd3rvqwp0d" path="res://scenes/components/shield_bubble.gd" id="1_q14e7"]

[node name="ShieldBubble" type="Node3D"]
script = ExtResource("1_q14e7")

[node name="RechargeDelay" type="Timer" parent="."]
unique_name_in_owner = true

[node name="RechargeTick" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="RechargeDelay" to="." method="_on_recharge_delay_timeout"]
[connection signal="timeout" from="RechargeTick" to="." method="_on_recharge_tick_timeout"]
